# OGQuery-Natural-Language-Query-Engine-for-Structured-Data

./: .gitignore  pyproject.toml  readme.md  test.py
ogquery/: __init__.py  api.py  core.py
ogquery/embeddings/: embedder.py
ogquery/engine/: answer_generator.py  data_context.py  groq_parser.py  ingestion.py  planner.py  query_engine.py
ogquery/schema/: registry.py
ogquery/storage/: mapping_store.py  numeric_store.py  persistence.py  row_store.py  semantic_store.py
ogquery/utils/: helpers.py  logger.py
